--- a/mobile/web/index.html
+++ b/mobile/web/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <!--
-    If you are serving your web app in a path other than the root, change the
-    href value below to reflect the base path you are serving from.
+    To serve the web app from a non-root path, update the
+    href value below to reflect the base path.
 
     The path provided below has to start and end with a slash "/" in order for
     it to work correctly.
